Closed
Bug 364219
Opened 19 years ago
Closed 19 years ago
Crash [@ CallQueryInterface] when passing on an xmlhttprequest load event to a timeout
Categories
(Core :: DOM: Events, defect)
Tracking
()
VERIFIED
FIXED
People
(Reporter: martijn.martijn, Assigned: smaug)
References
Details
(Keywords: crash, regression, testcase)
Crash Data
Attachments
(2 files)
|
884 bytes,
text/html
|
Details | |
|
5.94 KB,
patch
|
peterv
:
review+
peterv
:
superreview+
|
Details | Diff | Splinter Review |
See upcoming testcase, which crashes Mozilla on load.
It regressed between 2006-03-07 and 2006-03-08, so very likely a regression from bug 234455.
| Reporter | ||
Comment 1•19 years ago
|
||
| Reporter | ||
Comment 2•19 years ago
|
||
Talkback ID: TB27474944Z
CallQueryInterface<nsISupports,nsIDOMEventTarget> [mozilla\dist\include\xpcom\nscomptr.h, line 1660]
XPCWrappedNative::CallMethod [mozilla\js\src\xpconnect\src\xpcwrappednative.cpp, line 2162]
| Assignee | ||
Updated•19 years ago
|
Assignee: events → Olli.Pettay
| Assignee | ||
Comment 3•19 years ago
|
||
Fixing the misuse of event creation "API".
Stack based ns*Event structs should be used only when doing real event dispatch.
(After bug 363067 making xhr a real event target should be even easier
than now.)
Attachment #248996 -
Flags: superreview?(peterv)
Attachment #248996 -
Flags: review?(peterv)
Updated•19 years ago
|
Attachment #248996 -
Flags: superreview?(peterv)
Attachment #248996 -
Flags: superreview+
Attachment #248996 -
Flags: review?(peterv)
Attachment #248996 -
Flags: review+
| Assignee | ||
Updated•19 years ago
|
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 4•19 years ago
|
||
Verified fixed, using:
Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9a2pre) Gecko/20070123 Minefield/3.0a2pre
Status: RESOLVED → VERIFIED
Updated•15 years ago
|
Crash Signature: [@ CallQueryInterface]
You need to log in
before you can comment on or make changes to this bug.
Description
•