Bug 364219, Crash [@ CallQueryInterface] when passing on an xmlhttprequest load event to a timeout, r+sr=peterv